--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
-# Removes MacOS' metadata standard files. Will not be used.
-*.DS_Store
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Useless IDEA folders created by default.
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 *.idea
