--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/material": "^5.14.9",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/lab": "^5.0.0-alpha.145",
+    "@mui/material": "^5.14.10",
     "@mui/styled-engine-sc": "^5.14.9",
     "@mui/styles": "^5.14.9",
     "@react-google-maps/api": "^2.19.2",
